// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthBlocklistErc20Vault deposit can be called by not blocked user 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 71149,
}
`;

exports[`EthBlocklistErc20Vault deposit deposit through receive fallback can be called by not blocked sender 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 78315,
}
`;

exports[`EthBlocklistErc20Vault ejecting user blocklist manager can eject all of the user assets 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 120550,
}
`;

exports[`EthBlocklistErc20Vault ejecting user blocklist manager can eject some of the user assets 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 146827,
}
`;

exports[`EthBlocklistErc20Vault ejecting user does not fail for user with no osToken shares 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 120550,
}
`;

exports[`EthBlocklistErc20Vault ejecting user does not fail for user with no vault shares 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 56104,
}
`;

exports[`EthBlocklistErc20Vault mint osToken can mint from not blocked user 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 174071,
}
`;

exports[`EthBlocklistErc20Vault transfer can transfer 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 59012,
}
`;
